crates/moor-review-core/tests/snapshots/render__no_trailing_newline__ignore_ws.snap
---
source: crates/moor-review-core/tests/render.rs
expression: r
---
{
  "content": {
    "type": "Text",
    "total_rows": 1,
    "chunk_rows": 500,
    "chunk_count": 1,
    "highlighted": false,
    "additions": 0,
    "deletions": 0
  },
  "rows": [
    {
      "type": "WhitespaceOnly"
    }
  ]
}
